[package]
name = "ratelimits-service-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql", "chrono" ] }
axum = "*"
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = [ "serde" ] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = [ "derive" ] }
